# scheduler

./: .gitignore  Cargo.toml  README.md  opt.csv  schedule.csv  scheduler-cli
.github/workflows/: main.yml
application/: README.md
application/src/: index.html  main.js  styles.css
application/src-tauri/: Cargo.toml  tauri.conf.json
application/src-tauri/icons/: icon.icns
application/src-tauri/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs  models.rs
src/: lib.rs  main.rs
