[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "*" }
serde = { version = "*", features = ["derive"] }
# serde_json = { version = "*" }
csv = {version = "*"}

[lib]
name = "sheduler"
parh = "src/lib.rs"

[[bin]]
name = "sheduler-ui"
path = "src/main.rs"
